// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> renders a error state 1`] = `
<div>
  <div
    class="css-1t13ckc-Banner"
  >
    <span
      class="css-19zhg3v-Banner"
    >
      <strong>
        uh oh
      </strong>
    </span>
    <span>
      Actions
    </span>
  </div>
</div>
`;

exports[`<Banner /> renders a success state 1`] = `
<div>
  <div
    class="css-1u3yox3-Banner"
  >
    <span
      class="css-19zhg3v-Banner"
    >
      <strong>
        woohoo
      </strong>
    </span>
    <span>
      Actions
    </span>
  </div>
</div>
`;
